# protostar

./: .gitmodules  CMakeLists.txt  README  pb  pbuild
lib/display/: draw.c  draw.h  ssd1306_i2c.c  ssd1306_i2c.h  textures.c  textures.h
lib/draw/: draw.c  draw.h  fonts.h  ssd1306.h
lib/ssd1306/: ssd1306_i2c_l.c
src/: a.out  display.c  hello_world.c  paint_tool.c
